logs/pyexcelerator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyExcelerator'...
Compiling './lib/python3.5/site-packages/pyExcelerator/BIFFRecords.py'...
***   File "./lib/python3.5/site-packages/pyExcelerator/BIFFRecords.py", line 206
    file_hist_flags = 0x00L
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyExcelerator/Cell.py'...
***   File "./lib/python3.5/site-packages/pyExcelerator/Cell.py", line 119
    rk_encoded = (2 | (int(self.__number) << 2)) & 0xffffffffL
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyExcelerator/CompoundDoc.py'...
***   File "./lib/python3.5/site-packages/pyExcelerator/CompoundDoc.py", line 73
    print 'NOTE: header says that must be', self.total_ssat_sectors, 'short sectors'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyExcelerator/ExcelFormula.py'...
***   File "./lib/python3.5/site-packages/pyExcelerator/ExcelFormula.py", line 77
    raise Exception, "can't parse formula " + s
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyExcelerator/ExcelFormulaLexer.py'...
***   File "./lib/python3.5/site-packages/pyExcelerator/ExcelFormulaLexer.py", line 160
    print t
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyExcelerator/ExcelFormulaParser.py'...
***   File "./lib/python3.5/site-packages/pyExcelerator/ExcelFormulaParser.py", line 337
    raise Exception, "unknown function: %s" % func_tok.text
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyExcelerator/ImportXLS.py'...
***   File "./lib/python3.5/site-packages/pyExcelerator/ImportXLS.py", line 334
    raise Exception, 'No workbook stream in file.'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyExcelerator/Workbook.py'...
***   File "./lib/python3.5/site-packages/pyExcelerator/Workbook.py", line 526
    boundsheets_len += len(BIFFRecords.BoundSheetRecord(0x00L, sheet.hidden, sheet.name).get())
                                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyExcelerator/antlr.py'...
***   File "./lib/python3.5/site-packages/pyExcelerator/antlr.py", line 34
    print "error: ", fmt % tuple(args)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyExcelerator-0.6.4.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
